[*] merge recent changes