@@ -24,6 +24,7 @@ import com.epam.deltix.util.io.ByteArrayOutputStreamEx;
 
 import javax.tools.*;
 import java.io.*;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URI;
 import java.util.*;
 
@@ -61,8 +62,8 @@ public class JavaCompilerHelper {
         try {
             Class<? extends JavaCompiler> c = Class.forName(toolsJarClassLoader, false,
                     Thread.currentThread().getContextClassLoader()).asSubclass(JavaCompiler.class);
-            compiler = c.newInstance();
-        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+            compiler = c.getDeclaredConstructor().newInstance();
+        } catch (NoSuchMethodException | InvocationTargetException | ClassNotFoundException | IllegalAccessException | InstantiationException e) {
             compiler = ToolProvider.getSystemJavaCompiler();
         }
         return compiler;
@@ -87,14 +88,16 @@ public class JavaCompilerHelper {
     }
 
     public Class<?> compileClass (String className, String code) throws ClassNotFoundException {
-        List<MemorySource> compilationUnits = Arrays.asList(new MemorySource(className, code));
+        List<MemorySource> compilationUnits = List.of(new MemorySource(className, code));
         Writer out = new PrintWriter(System.err);
         DiagnosticCollector<JavaFileObject> dianosticListener = new DiagnosticCollector<>();
         final String optionString = System.getProperty("javac.options");
         final Iterable<String> options = optionString == null ? null : Arrays.asList(optionString.split(" "));
-        JavaCompiler.CompilationTask compile = JAVA_COMPILER_INSTANCE.getTask(out, fileManager, dianosticListener, options, null, compilationUnits);
+        JavaCompiler.CompilationTask compile;
         final boolean ok;
         synchronized (JAVA_COMPILER_INSTANCE) {
+            // "fileManager" is not thread-safe, so "getTask" should be synchronized
+            compile = JAVA_COMPILER_INSTANCE.getTask(out, fileManager, dianosticListener, options, null, compilationUnits);
             ok = compile.call();
         }
 
@@ -133,9 +136,11 @@ public class JavaCompilerHelper {
         DiagnosticCollector<JavaFileObject> dianosticListener = new DiagnosticCollector<>();
         final String optionString = System.getProperty("javac.options");
         final Iterable<String> options = optionString == null ? null : Arrays.asList(optionString.split(" "));
-        JavaCompiler.CompilationTask compile = JAVA_COMPILER_INSTANCE.getTask(out, fileManager, dianosticListener, options, null, compilationUnits);
+        JavaCompiler.CompilationTask compile;
         final boolean ok;
         synchronized (JAVA_COMPILER_INSTANCE) {
+            // "fileManager" is not thread-safe, so "getTask" should be synchronized
+            compile = JAVA_COMPILER_INSTANCE.getTask(out, fileManager, dianosticListener, options, null, compilationUnits);
             ok = compile.call();
         }
 
@@ -176,7 +181,7 @@ public class JavaCompilerHelper {
     }
 
     private static class MemorySource extends SimpleJavaFileObject {
-        private String src;
+        private final String src;
 
         public MemorySource(String name, String src) {
             super(URI.create("string:///" + name.replace ('.', '/') + ".java"), Kind.SOURCE);
@@ -201,7 +206,7 @@ public class JavaCompilerHelper {
 
 
     private static class SpecialJavaFileManager extends ForwardingJavaFileManager<JavaFileManager> {
-        private SpecialClassLoader xcl;
+        private final SpecialClassLoader xcl;
 
         public SpecialJavaFileManager(JavaFileManager sjfm, SpecialClassLoader xcl) {
             super(sjfm);
@@ -209,7 +214,7 @@ public class JavaCompilerHelper {
         }
 
         @Override
-        public JavaFileObject getJavaFileForOutput(Location location, String name, JavaFileObject.Kind kind, FileObject sibling) throws IOException {
+        public JavaFileObject getJavaFileForOutput(Location location, String name, JavaFileObject.Kind kind, FileObject sibling) {
             MemoryByteCode mbc = new MemoryByteCode(name);
             xcl.addClass(name, mbc);
             return mbc;
@@ -280,7 +285,7 @@ public class JavaCompilerHelper {
         extends ClassLoader 
         implements ClassDirectory
     {
-        private Map<String, MemoryByteCode> m = new HashMap<>();
+        private final Map<String, MemoryByteCode> m = new HashMap<>();
 
         public SpecialClassLoader(ClassLoader parent) {
             super(parent);
@@ -314,10 +319,11 @@ public class JavaCompilerHelper {
             return clazz == null ? defineClass(name, mbc.getBytes(), 0, mbc.getBytes().length) : clazz;
         }
 
-        public void addClass(String name, MemoryByteCode mbc) {
+        void addClass(String name, MemoryByteCode mbc) {
             m.put(name, mbc);
         }
 
+        @Override
         public Collection <Class<?>> listClassesForPackage (String packageName) {
             if (packageName != null && packageName.isEmpty ())
                 packageName = null;
